--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\erong\AppData\Local\Temp\testng-eclipse--626750014\testng-customsuite.xml</span>
+                    <span>C:\Users\erong\AppData\Local\Temp\testng-eclipse-2089542058\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_48">WEB_48</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_52_5">WEB_52_5</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="WEB_48">
-                  </a> <!-- WEB_48 -->
-                  <span class="method-name">WEB_48</span>
+                  <a name="WEB_52_5">
+                  </a> <!-- WEB_52_5 -->
+                  <span class="method-name">WEB_52_5</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\erong\AppData\Local\Temp\testng-eclipse--626750014\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\erong\AppData\Local\Temp\testng-eclipse-2089542058\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'WEB_48')
+data.setCell(0, 1, 'WEB_52_5')
 data.setCell(0, 2, 'com.pwc.productcentral.SanityTestCases')
-data.setCell(0, 3, 19951);
+data.setCell(0, 3, 21358);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 21 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,7 +210,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">58 ignored methods</span>
+            <span class="header-content">72 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -223,6 +223,8 @@ return data;
                 <span class="ignored-method-name">WEB_9</span>
                 <br/>
                 <span class="ignored-method-name">WEB_4</span>
+                <br/>
+                <span class="ignored-method-name">WEB_52_1</span>
                 <br/>
                 <span class="ignored-method-name">WEB_7</span>
                 <br/>
@@ -250,6 +252,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_2</span>
                 <br/>
+                <span class="ignored-method-name">WEB_48</span>
+                <br/>
                 <span class="ignored-method-name">WEB_45</span>
                 <br/>
                 <span class="ignored-method-name">WEB_49</span>
@@ -264,15 +268,29 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_51</span>
                 <br/>
+                <span class="ignored-method-name">WEB_53</span>
+                <br/>
                 <span class="ignored-method-name">WEB_14</span>
+                <br/>
+                <span class="ignored-method-name">WEB_58</span>
                 <br/>
                 <span class="ignored-method-name">WEB_11</span>
                 <br/>
+                <span class="ignored-method-name">WEB_55</span>
+                <br/>
+                <span class="ignored-method-name">WEB_52</span>
+                <br/>
                 <span class="ignored-method-name">WEB_13</span>
+                <br/>
+                <span class="ignored-method-name">WEB_57</span>
                 <br/>
                 <span class="ignored-method-name">WEB_15</span>
                 <br/>
+                <span class="ignored-method-name">WEB_59</span>
+                <br/>
                 <span class="ignored-method-name">WEB_12</span>
+                <br/>
+                <span class="ignored-method-name">WEB_56</span>
                 <br/>
                 <span class="ignored-method-name">WEB_17</span>
                 <br/>
@@ -282,11 +300,21 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_10</span>
                 <br/>
+                <span class="ignored-method-name">WEB_54</span>
+                <br/>
+                <span class="ignored-method-name">WEB_52_3</span>
+                <br/>
+                <span class="ignored-method-name">WEB_52_4</span>
+                <br/>
+                <span class="ignored-method-name">WEB_52_2</span>
+                <br/>
                 <span class="ignored-method-name">WEB_31_1</span>
                 <br/>
                 <span class="ignored-method-name">WEB_18</span>
                 <br/>
                 <span class="ignored-method-name">WEB_13_3</span>
+                <br/>
+                <span class="ignored-method-name">WEB_60</span>
                 <br/>
                 <span class="ignored-method-name">WEB_13_2</span>
                 <br/>
@@ -349,15 +377,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">118 ms</span>
+                <span class="method-start">120 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">WEB_48</span>
-                <span class="method-start">240 ms</span>
+                <span class="method-name">WEB_52_5</span>
+                <span class="method-start">242 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">closingBrowser</span>
-                <span class="method-start">20207 ms</span>
+                <span class="method-start">21617 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
