--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6decaa">  <td>22/12/20 11:32:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_48()[pri:0, instance:com.pwc.productcentral.SanityTestCases@2e16b08d]">WEB_48</td> 
+<tr bgcolor="6decaa">  <td>22/12/30 11:45:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_52_5()[pri:0, instance:com.pwc.productcentral.SanityTestCases@64d43929]">WEB_52_5</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>22/12/20 11:32:29</td>   <td>19968</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@2e16b08d]">&lt;&lt;closingBrowser</td> 
+<tr bgcolor="6decaa">  <td>22/12/30 11:46:05</td>   <td>21375</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@64d43929]">&lt;&lt;closingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>22/12/20 11:32:09</td>   <td>-122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@2e16b08d]">&gt;&gt;initTest</td> 
+<tr bgcolor="6decaa">  <td>22/12/30 11:45:44</td>   <td>-122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@64d43929]">&gt;&gt;initTest</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>22/12/20 11:32:09</td>   <td>-237</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@2e16b08d]">&gt;&gt;setUp</td> 
+<tr bgcolor="6decaa">  <td>22/12/30 11:45:44</td>   <td>-239</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@64d43929]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
