--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -3,6 +3,7 @@
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_6</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_9</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_4</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_1</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_7</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_14_2</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_40</td></tr>
@@ -16,6 +17,7 @@
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_41</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_46</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_2</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_48</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_45</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_49</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_43</td></tr>
@@ -23,18 +25,30 @@
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_5</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_50</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_51</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_53</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_14</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_58</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_11</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_55</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_13</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_57</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_15</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_59</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_12</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_56</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_17</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_19</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_16</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_10</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_54</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_3</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_4</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_2</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_31_1</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_18</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_13_3</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_60</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_13_2</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_20</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_25</td></tr>
