--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -47,18 +47,27 @@
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_2</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_31_1</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_18</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_52_5</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_61</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_13_3</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_60</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_62</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_13_2</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_20</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_64</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_25</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_22</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_66</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_63</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_24</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_68</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_26</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_23</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_67</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_28</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_27</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_21</td></tr>
+<tr><td>com.pwc.productcentral.SanityTestCases.WEB_65</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_29</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_31</td></tr>
 <tr><td>com.pwc.productcentral.SanityTestCases.WEB_36</td></tr>
