--- a/Automation Report for QA.html
+++ b/Automation Report for QA.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 5, 2023 01:08:42 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 5, 2023 02:40:08 PM</span>
 				</a>
 			</li>
 			<li>
@@ -155,14 +155,14 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>Verify the user should see different footer items if logged in</span>
-						<span class='test-time'>Jan 5, 2023 01:08:44 PM</span>
+						<span class='test-name'>Verify homepage tile component is system authored</span>
+						<span class='test-time'>Jan 5, 2023 02:40:10 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 5, 2023 01:08:44 PM</span>
-	<span class='label end-time'>Jan 5, 2023 01:08:44 PM</span>
+	<span class='label start-time'>Jan 5, 2023 02:40:10 PM</span>
+	<span class='label end-time'>Jan 5, 2023 02:40:10 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
 </div>
 	<div class='test-steps'>
@@ -177,8 +177,8 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>1:08:44 PM</td>
-					<td class='step-details'>The user does not see footer link group if logged in</td>
+					<td class='timestamp'>2:40:10 PM</td>
+					<td class='step-details'>Verified homepage tile component is system authored</td>
 				</tr>
 			</tbody>
 		</table>
@@ -232,19 +232,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 5, 2023 01:08:42 PM</div>
+					<div class='panel-lead'>Jan 5, 2023 02:40:08 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 5, 2023 01:08:44 PM</div>
+			 		<div class='panel-lead'>Jan 5, 2023 02:41:16 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>1,635ms</div>
+					<div class='panel-lead'>68,687ms</div>
 				</div>
 			</div>
 		</div>
