--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -27,11 +27,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_13_3</td>
+<td>WEB_9</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_9</td>
+<td>WEB_13_3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -92,6 +92,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>WEB_49</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>WEB_70</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -231,11 +235,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_25</td>
+<td>WEB_69</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_69</td>
+<td>WEB_25</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
