--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -95,6 +95,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>WEB_71</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>WEB_70</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -235,11 +239,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_69</td>
+<td>WEB_25</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>WEB_25</td>
+<td>WEB_69</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
