--- a/Automation Report for QA.html
+++ b/Automation Report for QA.html
@@ -44,7 +44,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jan 9, 2023 11:57:31 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Jan 9, 2023 12:40:11 PM</span>
 				</a>
 			</li>
 			<li>
@@ -156,14 +156,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Verify the author is able to author the title and the description</span>
-						<span class='test-time'>Jan 9, 2023 11:57:34 AM</span>
+						<span class='test-time'>Jan 9, 2023 12:40:13 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 9, 2023 11:57:34 AM</span>
-	<span class='label end-time'>Jan 9, 2023 11:57:34 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+1ms</span>
+	<span class='label start-time'>Jan 9, 2023 12:40:13 PM</span>
+	<span class='label end-time'>Jan 9, 2023 12:40:13 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -177,7 +177,7 @@
 			<tbody>
 				<tr class='log' status='info'>
 					<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-					<td class='timestamp'>11:57:34 AM</td>
+					<td class='timestamp'>12:40:13 PM</td>
 					<td class='step-details'>Verified the author is able to author the title and the description</td>
 				</tr>
 			</tbody>
@@ -232,19 +232,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 9, 2023 11:57:31 AM</div>
+					<div class='panel-lead'>Jan 9, 2023 12:40:11 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 9, 2023 11:58:06 AM</div>
+			 		<div class='panel-lead'>Jan 9, 2023 12:40:45 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>34,503ms</div>
+					<div class='panel-lead'>34,491ms</div>
 				</div>
 			</div>
 		</div>
