--- a/test-output/index.html
+++ b/test-output/index.html
@@ -146,7 +146,94 @@
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.pwc.productcentral.SanityTestCases&quot;/&gt;
+      &lt;class name=&quot;com.pwc.productcentral.SanityTestCases&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;WEB_1&quot;/&gt;
+          &lt;include name=&quot;WEB_2&quot;/&gt;
+          &lt;include name=&quot;WEB_3&quot;/&gt;
+          &lt;include name=&quot;WEB_4&quot;/&gt;
+          &lt;include name=&quot;WEB_5&quot;/&gt;
+          &lt;include name=&quot;WEB_5_2&quot;/&gt;
+          &lt;include name=&quot;WEB_6&quot;/&gt;
+          &lt;include name=&quot;WEB_7&quot;/&gt;
+          &lt;include name=&quot;WEB_8&quot;/&gt;
+          &lt;include name=&quot;WEB_9&quot;/&gt;
+          &lt;include name=&quot;WEB_10&quot;/&gt;
+          &lt;include name=&quot;WEB_11&quot;/&gt;
+          &lt;include name=&quot;WEB_12&quot;/&gt;
+          &lt;include name=&quot;WEB_13&quot;/&gt;
+          &lt;include name=&quot;WEB_13_1&quot;/&gt;
+          &lt;include name=&quot;WEB_13_2&quot;/&gt;
+          &lt;include name=&quot;WEB_13_3&quot;/&gt;
+          &lt;include name=&quot;WEB_14&quot;/&gt;
+          &lt;include name=&quot;WEB_14_1&quot;/&gt;
+          &lt;include name=&quot;WEB_14_2&quot;/&gt;
+          &lt;include name=&quot;WEB_14_3&quot;/&gt;
+          &lt;include name=&quot;WEB_15&quot;/&gt;
+          &lt;include name=&quot;WEB_16&quot;/&gt;
+          &lt;include name=&quot;WEB_17&quot;/&gt;
+          &lt;include name=&quot;WEB_18&quot;/&gt;
+          &lt;include name=&quot;WEB_19&quot;/&gt;
+          &lt;include name=&quot;WEB_20&quot;/&gt;
+          &lt;include name=&quot;WEB_21&quot;/&gt;
+          &lt;include name=&quot;WEB_22&quot;/&gt;
+          &lt;include name=&quot;WEB_23&quot;/&gt;
+          &lt;include name=&quot;WEB_24&quot;/&gt;
+          &lt;include name=&quot;WEB_25&quot;/&gt;
+          &lt;include name=&quot;WEB_26&quot;/&gt;
+          &lt;include name=&quot;WEB_27&quot;/&gt;
+          &lt;include name=&quot;WEB_28&quot;/&gt;
+          &lt;include name=&quot;WEB_29&quot;/&gt;
+          &lt;include name=&quot;WEB_30&quot;/&gt;
+          &lt;include name=&quot;WEB_31&quot;/&gt;
+          &lt;include name=&quot;WEB_31_1&quot;/&gt;
+          &lt;include name=&quot;WEB_32&quot;/&gt;
+          &lt;include name=&quot;WEB_33&quot;/&gt;
+          &lt;include name=&quot;WEB_34&quot;/&gt;
+          &lt;include name=&quot;WEB_35&quot;/&gt;
+          &lt;include name=&quot;WEB_36&quot;/&gt;
+          &lt;include name=&quot;WEB_37&quot;/&gt;
+          &lt;include name=&quot;WEB_38&quot;/&gt;
+          &lt;include name=&quot;WEB_39&quot;/&gt;
+          &lt;include name=&quot;WEB_40&quot;/&gt;
+          &lt;include name=&quot;WEB_41&quot;/&gt;
+          &lt;include name=&quot;WEB_42&quot;/&gt;
+          &lt;include name=&quot;WEB_43&quot;/&gt;
+          &lt;include name=&quot;WEB_44&quot;/&gt;
+          &lt;include name=&quot;WEB_45&quot;/&gt;
+          &lt;include name=&quot;WEB_46&quot;/&gt;
+          &lt;include name=&quot;WEB_47&quot;/&gt;
+          &lt;include name=&quot;WEB_48&quot;/&gt;
+          &lt;include name=&quot;WEB_49&quot;/&gt;
+          &lt;include name=&quot;WEB_50&quot;/&gt;
+          &lt;include name=&quot;WEB_51&quot;/&gt;
+          &lt;include name=&quot;WEB_52&quot;/&gt;
+          &lt;include name=&quot;WEB_52_1&quot;/&gt;
+          &lt;include name=&quot;WEB_52_2&quot;/&gt;
+          &lt;include name=&quot;WEB_52_3&quot;/&gt;
+          &lt;include name=&quot;WEB_52_4&quot;/&gt;
+          &lt;include name=&quot;WEB_52_5&quot;/&gt;
+          &lt;include name=&quot;WEB_53&quot;/&gt;
+          &lt;include name=&quot;WEB_54&quot;/&gt;
+          &lt;include name=&quot;WEB_55&quot;/&gt;
+          &lt;include name=&quot;WEB_56&quot;/&gt;
+          &lt;include name=&quot;WEB_57&quot;/&gt;
+          &lt;include name=&quot;WEB_58&quot;/&gt;
+          &lt;include name=&quot;WEB_59&quot;/&gt;
+          &lt;include name=&quot;WEB_60&quot;/&gt;
+          &lt;include name=&quot;WEB_61&quot;/&gt;
+          &lt;include name=&quot;WEB_62&quot;/&gt;
+          &lt;include name=&quot;WEB_63&quot;/&gt;
+          &lt;include name=&quot;WEB_64&quot;/&gt;
+          &lt;include name=&quot;WEB_65&quot;/&gt;
+          &lt;include name=&quot;WEB_66&quot;/&gt;
+          &lt;include name=&quot;WEB_67&quot;/&gt;
+          &lt;include name=&quot;WEB_68&quot;/&gt;
+          &lt;include name=&quot;WEB_69&quot;/&gt;
+          &lt;include name=&quot;WEB_70&quot;/&gt;
+          &lt;include name=&quot;WEB_71&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.pwc.productcentral.SanityTestCases --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -190,7 +277,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'WEB_71')
 data.setCell(0, 2, 'com.pwc.productcentral.SanityTestCases')
-data.setCell(0, 3, 34276);
+data.setCell(0, 3, 34278);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -399,15 +486,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">125 ms</span>
+                <span class="method-start">110 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">WEB_71</span>
-                <span class="method-start">249 ms</span>
+                <span class="method-start">234 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">closingBrowser</span>
-                <span class="method-start">34540 ms</span>
+                <span class="method-start">34528 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
