--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6decaa">  <td>23/01/09 11:11:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_71()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">WEB_71</td> 
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_1()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">WEB_1</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/09 11:12:17</td>   <td>34380</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&lt;&lt;closingBrowser</td> 
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:26</td>   <td>2244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_2()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">WEB_2</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:27</td>   <td>3422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_71()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">WEB_71</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:39</td>   <td>15388</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&lt;&lt;closingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/09 11:11:43</td>   <td>-125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;initTest</td> 
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:27</td>   <td>3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;initTest</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/09 11:11:43</td>   <td>-248</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;setUp</td> 
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:27</td>   <td>3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:27</td>   <td>3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/09 12:32:23</td>   <td>-237</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@71154f21]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
