--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\erong\AppData\Local\Temp\testng-eclipse-1378947507\testng-customsuite.xml</span>
+                    <span>C:\Users\erong\AppData\Local\Temp\testng-eclipse-100660448\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_43">WEB_43</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_31_1">WEB_31_1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.pwc.productcentral.SanityTestCases" class="method navigator-link" hash-for-method="WEB_32">WEB_32</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +132,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="WEB_43">
-                  </a> <!-- WEB_43 -->
-                  <span class="method-name">WEB_43</span>
+                  <a name="WEB_31_1">
+                  </a> <!-- WEB_31_1 -->
+                  <span class="method-name">WEB_31_1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="WEB_32">
+                  </a> <!-- WEB_32 -->
+                  <span class="method-name">WEB_32</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\erong\AppData\Local\Temp\testng-eclipse-1378947507\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\erong\AppData\Local\Temp\testng-eclipse-100660448\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'WEB_43')
+data.setCell(0, 1, 'WEB_32')
 data.setCell(0, 2, 'com.pwc.productcentral.SanityTestCases')
-data.setCell(0, 3, 1100);
+data.setCell(0, 3, 34446);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'WEB_31_1')
+data.setCell(1, 2, 'com.pwc.productcentral.SanityTestCases')
+data.setCell(1, 3, 26852);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -210,7 +226,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">92 ignored methods</span>
+            <span class="header-content">91 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -266,6 +282,8 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_49</span>
                 <br/>
+                <span class="ignored-method-name">WEB_43</span>
+                <br/>
                 <span class="ignored-method-name">WEB_5_2</span>
                 <br/>
                 <span class="ignored-method-name">WEB_5</span>
@@ -313,8 +331,6 @@ return data;
                 <span class="ignored-method-name">WEB_52_4</span>
                 <br/>
                 <span class="ignored-method-name">WEB_52_2</span>
-                <br/>
-                <span class="ignored-method-name">WEB_31_1</span>
                 <br/>
                 <span class="ignored-method-name">WEB_18</span>
                 <br/>
@@ -396,8 +412,6 @@ return data;
                 <br/>
                 <span class="ignored-method-name">WEB_38</span>
                 <br/>
-                <span class="ignored-method-name">WEB_32</span>
-                <br/>
                 <span class="ignored-method-name">WEB_76</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
@@ -417,19 +431,31 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">116 ms</span>
+                <span class="method-start">131 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">WEB_43</span>
-                <span class="method-start">600 ms</span>
+                <span class="method-name">WEB_31_1</span>
+                <span class="method-start">615 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeTabs</span>
-                <span class="method-start">1702 ms</span>
+                <span class="method-start">27468 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initTest</span>
+                <span class="method-start">27545 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">WEB_32</span>
+                <span class="method-start">27636 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeTabs</span>
+                <span class="method-start">62083 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">closingBrowser</span>
-                <span class="method-start">1733 ms</span>
+                <span class="method-start">62173 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
