--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6decaa">  <td>23/01/26 12:03:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_43()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_43</td> 
+<tr bgcolor="6decaa">  <td>23/01/27 09:05:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_31_1()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_31_1</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/26 12:03:31</td>   <td>1102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<tr bgcolor="6decaa">  <td>23/01/27 09:05:30</td>   <td>27021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityTestCases.WEB_32()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">WEB_32</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/27 09:06:04</td>   <td>61468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/26 12:03:31</td>   <td>1133</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closingBrowser</td> 
+<tr bgcolor="6decaa">  <td>23/01/27 09:06:04</td>   <td>61468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityTestCases.closeTabs()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closeTabs</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/27 09:06:04</td>   <td>61558</td> <td title="&lt;&lt;SanityTestCases.closingBrowser()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&lt;&lt;closingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/26 12:03:29</td>   <td>-483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<tr bgcolor="6decaa">  <td>23/01/27 09:05:29</td>   <td>26930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
 <td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="6decaa">  <td>23/01/26 12:03:29</td>   <td>-597</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;setUp</td> 
+<tr bgcolor="6decaa">  <td>23/01/27 09:05:29</td>   <td>26930</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityTestCases.initTest()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="6decaa">  <td>23/01/27 09:05:02</td>   <td>-611</td> <td title="&gt;&gt;SanityTestCases.setUp()[pri:0, instance:com.pwc.productcentral.SanityTestCases@3dedb4a6]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
